@@ -1,5 +1,9 @@
 2025-08-22  Zhengyi Fu  <i@fuzy.me>
 
+	* site-lisp/gptel-config.el (deepseek-mathematician): New preset.
+
+2025-08-22  Zhengyi Fu  <i@fuzy.me>
+
 	* scripts/claude: Add support for DeepSeek V3.1.
 
 2025-08-21  Zhengyi Fu  <i@fuzy.me>
